# ble-weatherstation-central

./: .gitignore  Cargo.toml  flake.nix
frontend/: package.json  tsconfig.json  webpack.config.js
frontend/src/: main.ts
frontend/src/css/: style.css
src/: bluetooth.rs  config.rs  db.rs  dummy.rs  http.rs  main.rs  mqtt.rs  opt.rs  sensor.rs  tasks.rs  templates.rs  timestamp.rs
src/bluetooth/: address.rs  dbus_interfaces.rs
src/http/: templates.rs
src/mqtt/: codec.rs
static/: script.js  style.css
templates/: detail.html  error.html  home.html  script.js
