[package]
name = "ble-weatherstation-central"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.5"
bitflags = "1.2.1"
bytemuck = { version = "1.5.0", features = ["derive"] }
byteorder = "1.4.2"
bytes = "1.0.1"
clap = "3.0.0-beta.2"
derive_more = "0.99.11"
directories-next = "2.0.0"
envy = "0.4.2"
eyre = "0.6.5"
flume = "0.10.1"
futures-util = "0.3.12"
heed = { version = "0.11.0", default-features = false, features = ["mdbx"] }
mqtt-protocol = { version = "0.10.0", default-features = false }
nix = "0.19.1"
rand = "0.7.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.23"
tokio = { version = "1.1.1", features = ["rt-multi-thread", "sync", "time", "signal", "macros", "net"] }
tokio-mqtt = { path = "tokio-mqtt" }
tokio-stream = "0.1.2"
tracing = "0.1.22"
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["smallvec", "chrono", "fmt", "ansi"] }
url = { version = "2.2.0", features = ["serde"] }
warp = { default-features = false, version = "0.3.0" }
zbus = { git = "https://gitlab.freedesktop.org/zeenix/zbus", rev = "d9bfcab6327a1f2e71abdd1e9a560189efcc84bd" }
zvariant = { git = "https://gitlab.freedesktop.org/zeenix/zbus", rev = "d9bfcab6327a1f2e71abdd1e9a560189efcc84bd" }
